--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/*.App {
   text-align: center;
 }
 
@@ -25,4 +25,46 @@
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
+}
+*/
+
+html, body { height: 100%; margin: 0; padding: 0; }
+#map {
+  bottom: 0px;
+  height: 100%;
+  left: 362px;
+  position: absolute;
+  right: 0px;
+}
+.show-box {
+  background: #fff;
+  border: 1px solid #999;
+  border-radius: 3px;
+  height: 100%;
+  line-height: 35px;
+  padding: 10px 10px 30px 10px;
+  text-align: left;
+  width: 240px;
+}
+#pano {
+  width: 200px;
+  height: 200px;
+}
+#toggle-drawing {
+  width: 30%;
+  position: relative;
+  margin-left: 10px;
+}
+#zoom-to-area-text {
+  position: relative;
+  width: 70%;
+}
+#zoom-to-area {
+  width: 24%;
+}
+#search-within-time-text {
+  width: 84%;
+}
+.text {
+  font-size: 12px;
 }
