--- a/src/App.css
+++ b/src/App.css
@@ -1,70 +1,101 @@
-/*.App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
-}
-*/
-
-html, body { height: 100%; margin: 0; padding: 0; }
-#map {
-  bottom: 0px;
+html, body {
   height: 100%;
-  left: 362px;
-  position: absolute;
-  right: 0px;
+  margin: 0;
+  padding: 0;
+  font-size: 16px;
 }
-.show-box {
+
+#panel {
+  width: 300px;
+  display: none;
+  position: absolute;
+  left: 0;
+  top: 50px;
+  z-index: 10;
+  background-color: #fff;
+}
+#open-menu{
+  position: absolute;
+  top:11px;
+  left: 105px;
+  z-index: 10;
+  background-color:#000;
+  padding: 6px;
+  font-size: 0.8em;
+  color:#fff;
+  cursor: pointer;
+  border: none;
+}
+#close-menu{
+  position: absolute;
+  top: 11px;
+  left: 265px;
+  z-index: 10;
+  background-color: #000;
+  padding: 4px 8px;
+  font-size: 0.8em;
+  color: #fff;
+  cursor: pointer;
+  border: none;
+}
+#open-menu:hover,
+#close-menu:hover {
+  background-color:#eee;
+  color:#222;
+}
+.options-box {
   background: #fff;
-  border: 1px solid #999;
   border-radius: 3px;
   height: 100%;
   line-height: 35px;
-  padding: 10px 10px 30px 10px;
+  padding: 10px 10px 10px 20px;
   text-align: left;
+  width: 270px;
+}
+h1{
+  font-size: 1.2em;
+  padding-left: 20px;
+  margin-bottom: 0;
+}
+h2{
+  padding-left: 20px;
+  font-size: 1.1em;
+}
+#list-of-places {
   width: 240px;
-}
-#pano {
-  width: 200px;
-  height: 200px;
-}
-#toggle-drawing {
-  width: 30%;
-  position: relative;
+  height: 320px;
+  overflow-y: scroll;
   margin-left: 10px;
+  scroll-behavior: auto;
+  background-color: #eee;
+  padding-top: 10px;
+  padding-bottom: 15px;
 }
-#zoom-to-area-text {
-  position: relative;
-  width: 70%;
+
+#list-of-places li{
+  color: rgb(12, 72, 128);
+  cursor: pointer;
+  line-height: 1.6;
+  margin-bottom: 10px;
 }
-#zoom-to-area {
-  width: 24%;
+#list-of-places li:hover{
+  background-color: #fff;
+  color: rgb(7, 45, 82);
 }
-#search-within-time-text {
-  width: 84%;
+#map {
+  bottom: 0px;
+  height: 100%;
+  left: 0;
+  position: absolute;
+  right: 0px;
+  z-index: 1;
 }
-.text {
-  font-size: 12px;
+
+.gm-style-iw {
+  width: 150px !important;
+  top: 0 !important;
+  left: 0 !important;
+  border-radius: 2px 2px 0 0;
+  padding: 10px;
+  font-size: 1.2em;
 }
