--- a/src/App.css
+++ b/src/App.css
@@ -184,9 +184,47 @@ h2{
   left: 0;
 }
 
-.offline {
+#container-offline {
+  width:100%;
+  height: 100%;
+  /* definition for background from site: http://lea.verou.me/css3patterns/#cross */
+  background:
+          radial-gradient(circle, transparent 20%, slategray 20%, slategray 80%, transparent 80%, transparent),
+          radial-gradient(circle, transparent 20%, slategray 20%, slategray 80%, transparent 80%, transparent) 50px 50px,
+          linear-gradient(#A8B1BB 8px, transparent 8px) 0 -4px,
+          linear-gradient(90deg, #A8B1BB 8px, transparent 8px) -4px 0;
+  background-color: slategray;
+  background-size:100px 100px, 100px 100px, 50px 50px, 50px 50px;
+}
+
+#info-offline {
   position: absolute;
-  left: 300px;
+  left: 320px;
+  background-color: #fff;
+  padding: 10px 20px;
+}
+
+#info-box {
+  position: absolute;
+  left: 250px;
+  top: 0;
+  z-index:10;
+  color:#000;
+  background-color:yellow;
+  padding: 20px;
+  width: 220px;
+  line-height: 1.4;
+  display: none;
+  box-shadow: 0 0 1em yellow;
+  font-size: 0.95em;
+}
+
+.show {
+  display: block !important;
+}
+
+.hide {
+  display: none !important;
 }
 
 @media (max-width:767px) {
