--- a/src/App.css
+++ b/src/App.css
@@ -250,14 +250,13 @@ h3 {
   display: none !important;
 }
 
-#det {
+#spec {
     position: absolute;
     bottom: 0;
     width: 100%;
-    z-index: 10;
+    z-index: 2;
     font-size: 0.9em;
-    padding: 10px;
-    background-color:#eee;
+    background-color:white;
     color:#000;
     height: 15%;
     overflow-y: scroll;
