--- a/src/App.css
+++ b/src/App.css
@@ -5,23 +5,23 @@ html, body {
   font-size: 16px;
 }
 
-#panel {
+#menu-wrapper {
   width: 290px;
   display: none;
   position: absolute;
   left: 0;
-  top: 50px;
-  z-index: 10;
+  top: 60px;
+  z-index: 2;
   background-color: #fff;
 }
 
 #open-menu{
   position: absolute;
-  top:11px;
-  left: 105px;
-  z-index: 10;
-  background-color:#000;
-  padding: 6px;
+  top:60px;
+  left: 10px;
+  z-index: 2;
+  background-color:#ff6262;
+  padding: 6px 15px;
   font-size: 0.8em;
   color:#fff;
   cursor: pointer;
@@ -33,7 +33,7 @@ html, body {
   top: 11px;
   left: 255px;
   z-index: 10;
-  background-color: #000;
+  background-color: #ff6262;
   padding: 4px 8px;
   font-size: 0.8em;
   color: #fff;
@@ -60,11 +60,15 @@ nav {
 nav button {
     display: block;
     float: left;
-    width: 120px;
+    width: 117px;
     margin-top: 5px;
     background-color: #eee;
     border-radius: 5px;
     cursor: pointer;
+}
+
+#show-parks {
+    margin-right: 15px;
 }
 
 nav button:hover {
@@ -102,9 +106,9 @@ h3 {
     font-size: 1em;
 }
 
-#list-of-places {
+#list-of-markers {
   width: 230px;
-  height: 320px;
+  height: 200px;
   overflow-y: scroll;
   margin-left: 10px;
   scroll-behavior: auto;
@@ -113,7 +117,7 @@ h3 {
   padding-bottom: 15px;
 }
 
-#list-of-places li,
+#list-of-markers li,
 #results{
   color: rgb(12, 72, 128);
   cursor: pointer;
@@ -260,6 +264,11 @@ h3 {
     color:#000;
     height: 15%;
     overflow-y: scroll;
+    padding-left: 15px;
+}
+
+.spec-wrapper {
+    margin: 15px;
 }
 
 @media (max-width:767px) {
